src/objects/inscor__Payment_Voucher__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account_Name__c</fullName>
        <formula>inscor__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Number__c</fullName>
        <formula>inscor__Account__r.inscor__Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Date_of_Invoice__c</fullName>
        <label>Date of Invoice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice__c</fullName>
        <label>Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__PN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PN</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__PO_or_RO_Line__c</fullName>
        <label>PO or RO Line #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__PO_or_RO__c</fullName>
        <label>PO or RO#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Accepted__c</fullName>
        <label>Quantity Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Paid__c</fullName>
        <label>Quantity Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Rejected__c</fullName>
        <label>Quantity Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_To_Pay__c</fullName>
        <label>Quantity To Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>inscor__Receipt__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__TA_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TA ID</label>
        <referenceTo>inscor__Activity__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Cost__c</fullName>
        <formula>inscor__Quantity_To_Pay__c *  inscor__Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Voucher</label>
    <nameField>
        <displayFormat>PV-{0}</displayFormat>
        <label>Payment Voucher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>